# InjuryDetection

./: .gitignore  CMakeLists.txt  Cluster.cpp  Cluster.h  ImgUtil.cpp  ImgUtil.h  IoUtil.cpp  IoUtil.h  README.md  Util.cpp  Util.h  main.cpp  notes
foto_luka_gimp/luka_campur/: 16.xcf  2.xcf  22.xcf  3.xcf  30.xcf  31.xcf  35.xcf  36.xcf  37.xcf  38.xcf  39.xcf  4.xcf  40.xcf  43.xcf  44.xcf  45.xcf  46.xcf  47.xcf  48.xcf  49.xcf  5.xcf  50.xcf  51.xcf  52.xcf  53.xcf  54.xcf  6.xcf
foto_luka_gimp/luka_hitam/: 1.xcf  15.xcf  16.xcf  17.xcf  18.xcf  19.xcf  2.xcf  20.xcf  25.xcf  28.xcf  33.xcf  37.xcf  39.xcf  4.xcf  40.xcf  41.xcf  5.xcf  6.xcf  8.xcf  9.xcf
foto_luka_gimp/luka_kuning/: 10.xcf  11.xcf  12.xcf  13.xcf  14.xcf  16.xcf  17(1).xcf  18(1).xcf  19.xcf  21.xcf  22.xcf  23(1).xcf  24.xcf  25(1).xcf  26.xcf  27.xcf  29.xcf  3.xcf  31.xcf  34.xcf  35.xcf  38.xcf  42.xcf  7.xcf
foto_luka_gimp/luka_merah/: 1.xcf  15.xcf  16.xcf  17.xcf  18.xcf  19.xcf  2.xcf  20.xcf  22.xcf  23.xcf  24.xcf  25.xcf  26.xcf  27.xcf  28.xcf  29.xcf  30.xcf  31.xcf  32.xcf  33.xcf  35.xcf  36.xcf  37.xcf  38.xcf  39.xcf  40.xcf  42.xcf  44.xcf  9.xcf
warna_dasar_luka/Foto_luka_campur_fix/: 49.xcf
warna_dasar_luka/Foto_luka_hitam_fix/: 15_region.xcf
warna_dasar_luka/Foto_luka_kuning_fix/: 2.xcf  4.xcf
